[gd_scene load_steps=4 format=2]

[ext_resource path="res://GFX/White-Square.jpg" type="Texture" id=1]
[ext_resource path="res://PLayer/enemy_2.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 128.863, 127.884 )

[node name="enemy_2" type="KinematicBody2D"]
modulate = Color( 0.215686, 0.956863, 0.0392157, 1 )
scale = Vector2( 0.11, 0.11 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Hitbox" type="Area2D" parent="Sprite" groups=[
"enemy_2",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Hitbox"]
shape = SubResource( 1 )

[node name="Stun_timer_2" type="Timer" parent="."]
wait_time = 0.1
[connection signal="area_entered" from="Sprite/Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="Stun_timer_2" to="." method="_on_Stun_timer_2_timeout"]
